--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>tests.mainFX</mainClass>
+                    <mainClass>test.TestPost</mainClass>
                 </configuration>
             </plugin>
         </plugins>
