--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <version>20.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
+            <version>20.0.2</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
