--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,19 @@
             <artifactId>h2</artifactId>
             <version>2.1.214</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20231013</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>20</version> <!-- ou ta version actuelle -->
+        </dependency>
+
     </dependencies>
 
     <build>
