--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.36</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio</artifactId>
+            <version>8.26.0</version>
+        </dependency>
 
 
     </dependencies>
