--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
             <version>20</version> <!-- ou ta version actuelle -->
         </dependency>
 
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.10</version> <!-- selon ta version de JavaFX -->
+        </dependency>
+
+
     </dependencies>
 
     <build>
