--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,23 @@
             <artifactId>lucene-analysis-common</artifactId>
             <version>9.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>5.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.konghq</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>3.13.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.1</version> <!-- Or use the latest version -->
+        </dependency>
+
 
 
     </dependencies>
