--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,6 @@
             <version>5.6.15.Final</version>
         </dependency>
 
-        <!-- Si tu veux utiliser H2 pour tester, tu peux aussi ajouter cette dépendance -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -63,6 +62,12 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20231013</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.1.2</version> <!-- version compatible JavaFX 11+ -->
         </dependency>
 
         <dependency>
@@ -82,6 +87,7 @@
             <artifactId>itext7-core</artifactId>
             <version>7.1.15</version>
         </dependency>
+
 
     </dependencies>
 
