Map picker BACK + Normal Map FRONT -- API_KEY GenerateImages Commented

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,10 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
     </properties>
+
+
 
     <dependencies>
         <!-- Database -->
@@ -29,6 +32,7 @@
             <artifactId>jbcrypt</artifactId>
             <version>0.4</version>
         </dependency>
+
 
         <!-- JavaFX -->
         <dependency>
@@ -75,13 +79,24 @@
             <version>3.13.6</version>
         </dependency>
 
+
+
+
+        <dependency>
+            <groupId>org.jxmapviewer</groupId>
+            <artifactId>jxmapviewer2</artifactId>
+            <version>2.6</version>
+        </dependency>
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
             <version>4.9.1</version> <!-- Or use the latest version -->
         </dependency>
-
-
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>17.0.2</version>
+        </dependency>
 
     </dependencies>
 
@@ -97,7 +112,9 @@
             <id>openjfx</id>
             <url>https://javafx.jfrog.io/artifactory/maven</url>
         </repository>
+
     </repositories>
+
 
     <build>
         <plugins>
