--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,11 @@
             <artifactId>itext7-core</artifactId>
             <version>7.1.15</version>
         </dependency>
-
+        <dependency>
+            <groupId>de.jensd</groupId>
+            <artifactId>fontawesomefx-fontawesome</artifactId>
+            <version>4.7.0-9.1.2</version>
+        </dependency>
 
     </dependencies>
 
